[gd_scene load_steps=11 format=3 uid="uid://diyx00sbuf88l"]

[ext_resource type="Script" path="res://obstacles/drone.gd" id="1_bg60d"]
[ext_resource type="Texture2D" uid="uid://ckl41knmxjwpi" path="res://obstacles/drone_sprites.png" id="1_g6ink"]

[sub_resource type="Animation" id="Animation_nhpf1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DroneSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_prshh"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DroneSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1, 0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DroneSprites:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0.125386), Vector2(0, 0.623071), Vector2(0, 0.399305), Vector2(0, 2.26659), Vector2(0, 2.73341), Vector2(0, 4.60069), Vector2(0, 4.37693), Vector2(0, 4.87461), Vector2(0, 5), Vector2(0, 4.87461), Vector2(0, 4.37693), Vector2(0, 4.60069), Vector2(0, 2.73341), Vector2(0, 2.26659), Vector2(0, 0.399306), Vector2(0, 0.623071), Vector2(0, 0.125386), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_fbjpl"]
resource_name = "stun_loop"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DroneSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_mcoms"]
resource_name = "stun_start_end"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DroneSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_o2pbe"]
resource_name = "idle_shooty"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DroneSprites:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0.125386), Vector2(0, 0.623071), Vector2(0, 0.399305), Vector2(0, 2.26659), Vector2(0, 2.73341), Vector2(0, 4.60069), Vector2(0, 4.37693), Vector2(0, 4.87461), Vector2(0, 5), Vector2(0, 4.87461), Vector2(0, 4.37693), Vector2(0, 4.60069), Vector2(0, 2.73341), Vector2(0, 2.26659), Vector2(0, 0.399306), Vector2(0, 0.623071), Vector2(0, 0.125386), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kptsf"]
_data = {
"RESET": SubResource("Animation_nhpf1"),
"idle": SubResource("Animation_prshh"),
"idle_shooty": SubResource("Animation_o2pbe"),
"stun_loop": SubResource("Animation_fbjpl"),
"stun_start_end": SubResource("Animation_mcoms")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7aci7"]
size = Vector2(64, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_kqjdk"]
radius = 200.0

[node name="Drone" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_bg60d")

[node name="StunTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="AimTimer" type="Timer" parent="."]
autostart = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_kptsf")
}

[node name="DroneSprites" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 3
texture = ExtResource("1_g6ink")
hframes = 5
vframes = 5

[node name="BulletOrigins" type="Node2D" parent="DroneSprites"]
unique_name_in_owner = true
position = Vector2(0, 9)

[node name="S" type="Marker2D" parent="DroneSprites/BulletOrigins"]
position = Vector2(0, 23)

[node name="SE" type="Marker2D" parent="DroneSprites/BulletOrigins"]
position = Vector2(16, 15)

[node name="E" type="Marker2D" parent="DroneSprites/BulletOrigins"]
position = Vector2(22, 1)

[node name="NE" type="Marker2D" parent="DroneSprites/BulletOrigins"]
position = Vector2(16, -14)

[node name="N" type="Marker2D" parent="DroneSprites/BulletOrigins"]
position = Vector2(0, -21)

[node name="NW" type="Marker2D" parent="DroneSprites/BulletOrigins"]
position = Vector2(-15, -14)

[node name="W" type="Marker2D" parent="DroneSprites/BulletOrigins"]
position = Vector2(-21, 0)

[node name="SW" type="Marker2D" parent="DroneSprites/BulletOrigins"]
position = Vector2(-15, 15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_7aci7")

[node name="ShootyPlayerDetection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootyPlayerDetection"]
shape = SubResource("CircleShape2D_kqjdk")

[connection signal="body_entered" from="." to="." method="_on_player_entered"]
[connection signal="body_exited" from="." to="." method="_on_player_exited"]
[connection signal="timeout" from="AimTimer" to="." method="_aim_at_player"]
[connection signal="timeout" from="ShootTimer" to="." method="_shoot"]
[connection signal="body_entered" from="ShootyPlayerDetection" to="." method="_on_shooty_player_detection_body_entered"]
[connection signal="body_exited" from="ShootyPlayerDetection" to="." method="_on_shooty_player_detection_body_exited"]
